--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to CSS</title>
-    <meta name="author" content="Jessica Barnett">
+    <meta name="author" content="Hernan Mendez">
     <meta name="description" content="Our first activity about cascading stylesheets. Let's learn how to add C.S.S. to a website!">
 
     <!-- Favicon Code -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-    <!-- TO DO: Link to CSS File Here -->
-    
+    <!--  Link to CSS File Here -->
+    <link rel="stylesheet" href="styles.css">
+
+
+
 </head>
 <body>
     <a href="#main-content" id="skip">Skip to Main Content</a>
@@ -121,7 +124,7 @@
         <div class="divider"></div>
 
         <section id="viewing">
-            <!-- TO DO: Follow along as we see how we can use the dev tools to help with CSS -->
+            <!-- : Follow along as we see how we can use the dev tools to help with CSS -->
             <h2>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circles-relation" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
